--- a/doc/manual/R-ints.texi
+++ b/doc/manual/R-ints.texi
@@ -3343,8 +3343,7 @@ package @pkg{grDevices}.
 @chapter Tools
 
 The behavior of @command{R CMD check} can be controlled through a
-variety of command line arguments, Perl configuration variables, and
-internal environment variables.
+variety of command line arguments and environment variables.
 
 There is an internal @option{--install=@var{value}} command line
 argument not shown by @command{R CMD check --help}, with possible values
@@ -3364,58 +3363,69 @@ Fake installation, and turn off the run-time tests.
 Skip installation, e.g., when testing recommended packages bundled with
 R.
 @item no
-The same as @option{--no-install}: turns off installation and the tests
+The same as @option{--no-install} : turns off installation and the tests
 which require the package to be installed.
 @end table
 
-The following internal environment variables are used for initializing
-the corresponding public Perl configuration variables
-(@pxref{Customizing checking and building, , Customizing checking and
-building, R-exts, Writing R Extensions}):
+The following environment variables can be used to customize the
+operation of @command{check}.
 
-@quotation
-@multitable {@code{_R_CHECK_LATEX_VIGNETTES_}} {@code{$R_check_latex_vignettes}}
-@item Environment variable
-@tab Configuration variable
-@item @code{_R_CHECK_ALL_NON_ISO_C_}
-@vindex _R_CHECK_ALL_NON_ISO_C_
-@tab @code{$R_check_all_non_ISO_C} 
-@item @code{_R_CHECK_FORCE_SUGGESTS_}
-@vindex_R_CHECK_FORCE_SUGGESTS_
-@tab @code{$R_check_force_suggests}
-@item @code{_R_CHECK_LATEX_VIGNETTES_}
-@vindex_R_CHECK_LATEX_VIGNETTES_
-@tab @code{$R_check_latex_vignettes}
-@item @code{_R_CHECK_RD_STYLE_}
-@vindex_R_CHECK_RD_CONTENTS_
-@tab @code{$R_check_Rd_contents}
-@item @code{_R_CHECK_RD_CONTENTS_}
-@vindex_R_CHECK_RD_STYLE_
-@tab @code{$R_check_Rd_style}
-@item @code{_R_CHECK_RD_XREFS_}
-@vindex_R_CHECK_RD_XREFS_
-@tab @code{$R_check_Rd_xrefs}
-@item @code{_R_CHECK_SUBDIRS_NOCASE_}
-@vindex_R_CHECK_SUBDIRS_NOCASE_
-@tab @code{$R_check_subdirs_nocase}
-@item @code{_R_CHECK_SUBDIRS_STRICT_}
-@vindex_R_CHECK_SUBDIRS_STRICT_
-@tab @code{$R_check_subdirs_strict}
-@item @code{_R_CHECK_USE_INSTALL_LOG_}
-@vindex_R_CHECK_USE_INSTALL_LOG_
-@tab @code{$R_check_use_install_log}
-@item @code{_R_CHECK_WEAVE_VIGNETTES_}
-@vindex_R_CHECK_WEAVE_VIGNETTES_
-@tab @code{$R_check_weave_vignettes}
-@item @code{_R_CHECK_USE_CODETOOLS_}
-@vindex_R_CHECK_USE_CODETOOLS_
-@tab @code{$R_check_use_codetools}
-@end multitable
-@end quotation
-
-The following internal environment variables have no corresponding
-configuration variable.
 @vtable @code
+@item _R_CHECK_ALL_NON_ISO_C_
+@vindex _R_CHECK_ALL_NON_ISO_C_
+If true, do not ignore compiler (typically GCC) warnings about non ISO C
+code in @emph{system} headers.  Note that this may also show additional
+ISO C++ warnings.
+Default: false.
+@item _R_CHECK_FORCE_SUGGESTS_
+@vindex_R_CHECK_FORCE_SUGGESTS_
+If true, give an error if suggested packages are not available.
+Default: true.
+@item _R_CHECK_LATEX_VIGNETTES_
+@vindex_R_CHECK_LATEX_VIGNETTES_
+If true (and @code{R_check_weave_vignettes} is also true),
+@command{latex} package vignettes in the process of checking them: this
+will show up @code{Sweave} source errors, including missing source
+files.  Default: true.
+@item _R_CHECK_RD_CONTENTS_
+@vindex_R_CHECK_RD_CONTENTS_
+If true, check @file{Rd} files for auto-generated content which needs editing,
+and missing argument documentation.
+Default: true.
+@item _R_CHECK_RD_STYLE_
+@vindex_R_CHECK_RD_STYLE_
+If true, check whether @file{Rd} usage entries for S3 methods use the full
+function name rather than the appropriate @code{\method} markup.
+Default: true.
+@item _R_CHECK_RD_XREFS_
+@vindex_R_CHECK_RD_XREFS_
+If true, check the cross-references in @file{.Rd} files.
+Default: true.
+@item _R_CHECK_SUBDIRS_NOCASE_
+@vindex_R_CHECK_SUBDIRS_NOCASE_
+If true, check the case of directories such as @file{R} and @file{man}.
+Default: false.
+@item _R_CHECK_SUBDIRS_STRICT_
+@vindex_R_CHECK_SUBDIRS_STRICT_
+Initial setting for @option{--check-subdirs}.
+Default: @samp{default} (which checks only tarballs, and checks in the
+@file{src} only if there is no @file{configure} file).
+@item _R_CHECK_USE_INSTALL_LOG_
+@vindex_R_CHECK_USE_INSTALL_LOG_
+If true, record the output from installing a package as part of its
+check to a log file (@file{00install.out} by default), even when running
+interactively.
+Default: true.
+@item _R_CHECK_WEAVE_VIGNETTES_
+@vindex_R_CHECK_WEAVE_VIGNETTES_
+If true, weave package vignettes in the process of checking them.
+Default: true.
+@item _R_CHECK_USE_CODETOOLS_
+@vindex_R_CHECK_USE_CODETOOLS_
+If true, make use of the @pkg{codetools} package, which provides a
+detailed analysis of visibility of objects (but may give false
+positives).
+Default: true.
 @item _R_CHECK_CODOC_S4_METHODS_
 Control whether @code{codoc()} testing is also performed on S4 methods.
 This was off by default in R versions prior to 2.10.0 as it gave false
@@ -3433,6 +3443,9 @@ listed in the package's @file{BinaryFiles} file.
 Default: true.
 However, most likely this package-level override mechanism will be
 removed eventually.
+@item _R_CHECK_PERMISSIONS_
+Control whether permissions of files should be checked.
+Default: true iff @code{.Platform$OS.type == "unix"}.
 @item _R_CHECK_FF_CALLS_
 Allows turning off @code{checkFF()} testing.  Legacy mostly.
 Default: true.
@@ -3448,43 +3461,26 @@ Off by default because this can result in false positives.
 New in @R{} 2.10.0.  Controls the minimum level for reporting warnings
 from @code{checkRd}.
 Default: -1.
-@item _R_CHECK_RD_USAGE_METHOD_BINOPS_
-Control whether binops generics are considered as allowing useful S3
-method markup. 
-Default: true (as this Rd feature was added some time ago).
-OBSOLETE.
-@item _R_CHECK_RD_USAGE_METHOD_SUBSET_
-Control whether subset generics are considered as allowing useful S3
-method markup.
-Default: true (as this Rd feature was added some time ago).
-OBSOLETE.
 @item _R_CHECK_XREFS_REPOSITORIES_
 New in @R{} 2.10.0.  If set to a non-empty value, a space-separated list
 of repositories to use to determine known packages.
-Default: empty, when the CRAN, Omegahat and
-Bioconductor repositories known to @R{} is used.
+Default: empty, when the CRAN, Omegahat and Bioconductor repositories
+known to @R{} is used.
 @item _R_CHECK_SRC_MINUS_W_IMPLICIT_
 Control whether installation output is checked for compilation warnings
 about implicit function declarations (as spotted by GCC with command
 line option @option{-Wimplicit-function-declaration}, which is implied
 by @option{-Wall}).
 Default: false.
-This should really be a configuration variable, but we need a better
-name.
 @item _R_CHECK_SRC_MINUS_W_UNUSED_
 Control whether installation output is checked for compilation warnings
 about unused code constituents (as spotted by GCC with command line
 option @option{-Wunused}, which is implied by @option{-Wall}).
+Default: true.
 @item _R_CHECK_WALL_FORTRAN_
-Control whether gfortran 4.0 or better @option{-Wall} warnings are used in
+Control whether gfortran 4.0 or later @option{-Wall} warnings are used in
 the analysis of installation output.
 Default: false, even though the warnings are justifiable.
-This should really be a configuration variable, but we need a better name.
-@item _R_CHECK_WARN_BAD_USAGE_LINES_
-Control whether @code{checkDocFiles()} warns about bad Rd @code{\usage}
-lines.
-Default: true (as @code{\special} was rolled out a long time ago).
-OBSOLETE.
 @end vtable
 
 @node R coding standards, Testing R code, Tools, Top
