--- a/NEWS
+++ b/NEWS
@@ -24,10 +24,10 @@ NEW FEATURES
 
 DEPRECATED & DEFUNCT
 
-    o	The use of Perl configuration variables (as previously
-	documented in 'Writing R Extensions') is deprecated and will be
-	removed in R 2.12.0.  Use the environment variables documented
-	in 'R Internals' instead.
+    o	The use of Perl configuration variables for R CMD check (as
+	previously documented in 'Writing R Extensions') is deprecated
+	and will be removed in R 2.12.0.  Use the environment
+	variables documented in 'R Internals' instead.
 
 
 BUG FIXES
@@ -60,7 +60,7 @@ BUG FIXES
 	on Solaris, where the error code returned is not even listed
 	as possible on the man page.)
 
-    o	The postscript() and pdf() devices will now allow lwd values
+    o	The postscript() and pdf() devices will now allow 'lwd' values
 	less than 1 (they used to force such values to be 1).
 
     o	Fixed font face for CID fonts in pdf() graphics output. (PR#14326)
@@ -78,6 +78,7 @@ BUG FIXES
         
     o	\Sexpr[result=rd] in an Rd file added a spurious newline,
 	which was displayed as extra whitespace when rendered.
+
 
 
 		CHANGES IN R VERSION 2.11.1
