fixes to require(save = TRUE) and its documentation
git-svn-id: https://svn.r-project.org/R/branches/R-2-11-branch@52614 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -79,6 +79,9 @@ BUG FIXES
     o	\Sexpr[result=rd] in an Rd file added a spurious newline,
 	which was displayed as extra whitespace when rendered.
 
+    o	require(save = TRUE) recorded in .Depends the names of
+	packages it failed to load.
+
 
 
 		CHANGES IN R VERSION 2.11.1
